--- a/accept-invite.html
+++ b/accept-invite.html
@@ -257,7 +257,7 @@
   
   <script>
     // ⚠️ IMPORTANT: Replace with your Apps Script URL
-    const API_URL = 'YOUR_APPS_SCRIPT_URL_HERE';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbz661QE15u7qwSqqjNKSluIELkiWPzJDeRUvF50MEstLAmHwb1_lfLT6gqovB2fmI7QTw/exec';
     
     // Get invite code from URL
     const urlParams = new URLSearchParams(window.location.search);
