--- a/login.html
+++ b/login.html
@@ -244,7 +244,7 @@
   
   <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     // ⚠️ IMPORTANT: Replace with your Apps Script URL
-    const API_URL = 'YOUR_APPS_SCRIPT_URL_HERE';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbz661QE15u7qwSqqjNKSluIELkiWPzJDeRUvF50MEstLAmHwb1_lfLT6gqovB2fmI7QTw/exec';
     
     console.log('Login page loaded');
     console.log('API_URL:', API_URL);
