--- a/portal.html
+++ b/portal.html
@@ -294,7 +294,7 @@
   
   <script>
     // ⚠️ IMPORTANT: Update with your Apps Script URL
-    const API_URL = 'YOUR_APPS_SCRIPT_URL_HERE';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbz661QE15u7qwSqqjNKSluIELkiWPzJDeRUvF50MEstLAmHwb1_lfLT6gqovB2fmI7QTw/exec';
     
     const token = localStorage.getItem('token');
     const user = JSON.parse(localStorage.getItem('user') || '{}');
