--- a/sheet.html
+++ b/sheet.html
@@ -376,7 +376,7 @@
   </div>
   
   <script>
-    const API_URL = 'YOUR_APPS_SCRIPT_URL_HERE';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbypIEYETgAjROj-81xqB8v5ibiBmCzTqEH90JpsTcwu8MLj6FxBy2Pmo9yC7l-DwfSe/exec';
     
     const token = localStorage.getItem('token');
     const user = JSON.parse(localStorage.getItem('user') || '{}');
